# bazel-openssl

./: README.md  WORKSPACE
main/: BUILD  hello-world.cc  test.cc
openssl/: BUILD.bazel  BUILD.bazel.perl  BUILD.openssl.bazel  openssl_repositories.bzl
