load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make", "configure_make_variant")

# Read https://wiki.openssl.org/index.php/Compilation_and_Installation

filegroup(
    name = "all_srcs",
    srcs = glob(
        include = ["**"],
        exclude = ["*.bazel"],
    ),
)

CONFIGURE_OPTIONS = [
    "no-comp",
    "no-idea",
    "no-weak-ssl-ciphers",
    "no-shared",
]

LIB_NAME = "openssl"

MAKE_TARGETS = [
    "build_libs",
    "install_dev",
    "build_programs",
    "install_sw",
]

config_setting(
    name = "linux",
    constraint_values = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
)

configure_make(
    name = "openssl",
    configure_command = "config",
    configure_in_place = True,
    configure_options = CONFIGURE_OPTIONS,
    lib_source = ":all_srcs",
    out_lib_dir = "lib",
    lib_name = LIB_NAME,
    # Note that for Linux builds, libssl must come before libcrypto on the linker command-line.
    # As such, libssl must be listed before libcrypto
    #out_shared_libs = ["libssl.so.1.1", "libcrypto.so.1.1",],
    out_static_libs = ["libssl.a", "libcrypto.a",],
    visibility = ["//visibility:public"], 
    targets = MAKE_TARGETS,
)

#filegroup(
#    name = "gen_dir",
#    srcs = [":openssl"],
#    output_group = "gen_dir",
#    visibility = ["//visibility:public"],
#)

